# python-programming

./: README.md
homework-0-JinglunJiang-main/: README.md  pyproject.toml
homework-0-JinglunJiang-main/problem1/: leap_year.py
homework-0-JinglunJiang-main/problem2/: duplicates.py
homework-0-JinglunJiang-main/problem3/: collatz.py
homework-1-JinglunJiang-main/: README.md  file-io.md  pyproject.toml
homework-1-JinglunJiang-main/problem1/: find_twos.py
homework-1-JinglunJiang-main/problem2/: grid.py
homework-1-JinglunJiang-main/problem3/: test_towing.py  towing.py
homework-1-JinglunJiang-main/problem4/: problem4.py
homework-2-JinglunJiang-main/problem1/: problem1.py
homework-2-JinglunJiang-main/problem2/: problem2.py
homework-2-JinglunJiang-main/problem3/: problem3.py
homework-2-JinglunJiang-main/problem4/: problem4.py
homework-2-JinglunJiang-main/problem5/: problem5.py
homework-2-JinglunJiang-main/problem6/: problem6.py
homework-4-JinglunJiang-main/: README.md
homework-5-JinglunJiang-main/: README.md
homework-5-JinglunJiang-main/csg/: csg.py
homework-6-JinglunJiang-main/: README.md  pyproject.toml  weather.json
homework-6-JinglunJiang-main/instance/: test.db
homework-6-JinglunJiang-main/problem1/: download.py  stats.py  test-weather.json  test_weather_api.py  weather.json
homework-6-JinglunJiang-main/problem2/: problem2.py  questions.md  test_problem2.py
homework-6-JinglunJiang-main/problem2/instance/: test.db
homework-6-JinglunJiang-main/problem2/static/: style.css
homework-6-JinglunJiang-main/problem2/templates/: index.html
(+15 files in other folders)
